fix prepublishOnly  - npm 5

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "rollup -c",
     "start": "rollup -c -w",
     "prepare": "npm run build",
-    "prepublish": "npm run build"
+    "prepublishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
