--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "react-class-hooks",
-  "version": "0.3.4",
+  "version": "0.3.6",
   "description": "react-class-hooks",
   "main": "dist/index.js",
+  "module": "dist/index.esm.js",
   "engines": {
     "node": ">=8",
     "npm": ">=5"
@@ -32,31 +33,30 @@
     "url": "https://github.com/salvoravida/react-class-hooks/issues"
   },
   "homepage": "https://github.com/salvoravida/react-class-hooks#readme",
-  "dependencies": {
-    "tiny-invariant": "^1.0.4"
-  },
+  "dependencies": {},
   "peerDependencies": {
     "react": ">=15.3.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.5.0",
-    "@babel/core": "^7.5.4",
-    "@babel/preset-env": "^7.5.4",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/runtime-corejs2": "^7.5.4",
-    "cross-env": "^5.2.0",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-config-standard-react": "^7.0.2",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-node": "^9.1.0",
-    "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-react": "^7.13.0",
-    "eslint-plugin-standard": "^4.0.0",
-    "rollup": "^1.16.7",
-    "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-node-resolve": "^5.2.0"
+    "@babel/cli": "7.5.5",
+    "@babel/core": "7.5.5",
+    "@babel/preset-env": "7.5.5",
+    "@babel/preset-react": "7.0.0",
+    "@babel/runtime-corejs2": "7.5.5",
+    "cross-env": "5.2.0",
+    "eslint": "6.2.2",
+    "eslint-config-airbnb": "18.0.1",
+    "eslint-config-standard": "14.0.1",
+    "eslint-config-standard-react": "9.0.0",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-node": "9.1.0",
+    "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-react": "7.14.3",
+    "eslint-plugin-standard": "4.0.1",
+    "rollup": "1.20.2",
+    "rollup-plugin-babel": "4.3.3",
+    "rollup-plugin-node-resolve": "5.2.0",
+    "tiny-invariant": "1.0.6"
   }
 }
