--- a/package.json
+++ b/package.json
@@ -38,23 +38,21 @@
     "react": ">=15.3.2"
   },
   "devDependencies": {
-    "@babel/cli": "7.5.5",
-    "@babel/core": "7.5.5",
-    "@babel/preset-env": "7.5.5",
-    "@babel/preset-react": "7.0.0",
-    "@babel/runtime-corejs2": "7.5.5",
-    "cross-env": "5.2.0",
-    "eslint": "6.2.2",
+    "@babel/cli": "7.6.4",
+    "@babel/core": "7.6.4",
+    "@babel/preset-env": "7.6.3",
+    "@babel/preset-react": "7.6.3",
+    "eslint": "6.5.1",
     "eslint-config-airbnb": "18.0.1",
-    "eslint-config-standard": "14.0.1",
-    "eslint-config-standard-react": "9.0.0",
+    "eslint-config-standard": "14.1.0",
+    "eslint-config-standard-react": "9.2.0",
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-node": "9.1.0",
+    "eslint-plugin-node": "10.0.0",
     "eslint-plugin-promise": "4.2.1",
-    "eslint-plugin-react": "7.14.3",
-    "eslint-plugin-standard": "4.0.1",
-    "rollup": "1.20.2",
+    "eslint-plugin-react": "7.16.0",
+    "eslint-plugin-standard": "^4.0.1",
+    "rollup": "1.25.0",
     "rollup-plugin-babel": "4.3.3",
     "rollup-plugin-node-resolve": "5.2.0",
     "tiny-invariant": "1.0.6"
