--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,23 +2,5 @@
   "env": {
     "browser": true
   },
-  "extends": "airbnb",
-  "rules": {
-    "indent": ["error", 4],
-    "import/no-unresolved": 0,
-    "no-underscore-dangle": "off",
-    "max-len": "off",
-    "camelcase": 0,
-    "import/prefer-default-export": 0,
-    "import/no-extraneous-dependencies": 0,
-    "linebreak-style": 0,
-    "no-nested-ternary": 0,
-    "no-param-reassign": 0,
-    "no-prototype-builtins": 0,
-    "no-restricted-syntax": 0,
-    "no-return-assign": 0,
-    "no-unused-vars": "warn",
-    "no-unused-expressions": 0,
-    "spaced-comment": 0
-  }
+  "extends": ["@salvoravida"]
 }
