--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@babel/preset-env": "7.6.3",
     "@babel/preset-react": "7.6.3",
     "@salvoravida/eslint-config": "0.0.1",
+    "react": "16.11.0",
     "rollup": "1.26.0",
     "rollup-plugin-babel": "4.3.3",
     "rollup-plugin-node-resolve": "5.2.0",
